# snow_dbt

./: .env  .gitignore  Dockerfile.airflow  Dockerfile.dbt  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py
dags/: bookshop_ingestion.py  bookshop_transformation.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: check_schema.sql  check_table.sql  check_table_content.sql  create_staging_schema.sql  custom_schema.sql  grant_privileges.sql  list_tables.sql  setup_permissions.sql  setup_schema.sql  show_tables.sql  test_connection.sql  test_create_table.sql  test_query.sql  test_transformation.sql
dbt/models/: sources.yml
dbt/models/marts/: obt_sales.sql
dbt/models/staging/: schema.yml  sources.yml  stg_books.sql  stg_category.sql  stg_customers.sql  stg_factures.sql  stg_ventes.sql
dbt/models/warehouse/: dim_books.sql  dim_category.sql  dim_customers.sql  fact_books_annees.sql  fact_books_jour.sql  fact_books_mois.sql  fact_factures.sql  fact_ventes.sql
dbt/tests/: test_dates.sql  test_relationships.sql
init-scripts/: 01-init-databases.sql
scripts/: 01-init-databases.sql  02-init-data.sql  create-multiple-postgresql-databases.sh  ingest_to_snowflake.py  init_snowflake.sql.bak  postgres_diagram_bigdata_m2.sql  test_snowflake.py
