[project]
name = "snow-dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Dar-rius",email = "mohamedtine17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.32.0)",
    "pandas (>=2.2.1)",
    "sqlalchemy (>=1.4.0)",
    "snowflake-sqlalchemy (>=1.5.1)",
    "python-dotenv (>=1.0.1)",
    "psycopg2-binary (>=2.9.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
